--- a/postgresql/docker-compose.yml
+++ b/postgresql/docker-compose.yml
@@ -1,16 +1,21 @@
 version: '3.8'
 services:
   db:
-    image: postgres:14-alpine
+    container_name: postgresql
+    build:
+      context: .
+      dockerfile: postgis.Dockerfile
+    image: postgres:14.9
     restart: always
-    environment: 
+    environment:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=Password1@
       - PGDATA=/var/lib/postgresql/data/pgdata
     ports:
       - '5432:5432'
     volumes:
+      - ./db:/docker-entrypoint-initdb.d/
       - db:/var/lib/postgres/data
 volumes:
-  db: 
+  db:
     driver: local
