add mysql custom config

--- a/mysql/docker-compose.yml
+++ b/mysql/docker-compose.yml
@@ -4,9 +4,9 @@ services:
     image: mysql:8.0.32
     restart: always
     environment:
-      - MYSQL_USER: root
-      - MYSQL_PASSWORD: Password@1
-      - MYSQL_ROOT_PASSWORD: Password@1
+      MYSQL_USER: "root"
+      MYSQL_PASSWORD: "Password@2"
+      MYSQL_ROOT_PASSWORD: "Password@2"
     ports:
       - '3306:3306'
     volumes:
