--- a/postgresql/docker-compose.yml
+++ b/postgresql/docker-compose.yml
@@ -14,4 +14,7 @@ services:
       - "5432:5432"
     volumes:
       - ./db:/docker-entrypoint-initdb.d/
-      - ./data:/var/lib/postgresql/data
+      - postgres_data:/var/lib/postgresql/data
+volumes:
+  postgres_data:
+    driver: local
