--- a/mysql/docker-compose.yml
+++ b/mysql/docker-compose.yml
@@ -1,17 +1,20 @@
-version: '3.8'
 services:
-  db:
-    image: mysql:8.0.32
+  db_mysql:
+    image: mysql:8.0
     restart: always
     environment:
-      MYSQL_USER: "root"
+      MYSQL_USER: "mysqluser"
       MYSQL_PASSWORD: "Password@2"
       MYSQL_ROOT_PASSWORD: "Password@2"
     ports:
       - '3306:3306'
     volumes:
-      - db:/var/lib/mysql
+      - ./data:/var/lib/mysql
       - ./init-dump:/docker-entrypoint-initdb.d
-volumes:
-  db:
-    driver: local
+    # healthcheck:
+    #   test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
+    #   interval: 60s
+    #   timeout: 5s
+    #   retries: 5
+
+volumes: {}
