--- a/mysql/docker-compose.yml
+++ b/mysql/docker-compose.yml
@@ -2,6 +2,8 @@ services:
   db_mysql:
     image: mysql:8.0
     restart: always
+    networks:
+      - defaults
     environment:
       MYSQL_USER: "mysqluser"
       MYSQL_PASSWORD: "Password@2"
@@ -18,3 +20,7 @@ services:
     #   retries: 5
 
 volumes: {}
+
+networks:
+  defaults:
+    external: true
