--- a/redis/docker-compose.yml
+++ b/redis/docker-compose.yml
@@ -10,6 +10,13 @@ services:
     command: redis-server --loglevel notice # Less verbose logging level
     volumes:
       - data:/data
+    networks:
+      - defaults
+
 volumes:
   data:
     driver: local
+
+networks:
+  defaults:
+    external: true
