housekee: elastic stack apm_server

--- a/elastic-stack/apm-server/apm-server.yml
+++ b/elastic-stack/apm-server/apm-server.yml
@@ -1,30 +1,26 @@
 apm-server:
   host: "0.0.0.0:8200"
-  #frontend:
-  # enabled: true
-  #  frontend.allow_origin: '*'
-  # auth:
-  #   secret_token: 'changeme'
-  #   anonymous:
-  #     enabled: true
-  # kibana:
-  #   enabled: true
-  #   host: "http://kibana:5601"
-  # monitoring:
-  #   enabled: true
-  #   hosts: ["http://elasticsearch:9200"]
-  #   username: 'elastic'
-  #   password: 'changeme'
-#rum:
-#  enabled: true
-#  allow_origins: ['*']
-output.elasticsearch:
-  enabled: true
-  hosts: ["http://elasticsearch:9200"]
-  username: 'elastic'
-  password: 'changeme'
+  auth:
+    secret_token: "changemechangemechangeme"
+  rum:
+    enabled: true
+  kibana:
+    enabled: true
+    host: "http://kibana:5601"
+    username: elastic
+    password: changeme
+  ssl:
+    enabled: false
 
-setup.kibana:
-  host: "http://kibana:5601"
-  username: 'elastic'
-  password: 'changeme'
+output.elasticsearch:
+  hosts: ["http://elasticsearch:9200"]
+  username: elastic
+  password: changeme
+
+monitoring.enabled: true
+monitoring.elasticsearch:
+  hosts: ["http://elasticsearch:9200"]
+  username: elastic
+  password: changeme
+
+logging.level: debug
