--- a/elastic-stack/kibana/docker-compose.yml
+++ b/elastic-stack/kibana/docker-compose.yml
@@ -3,22 +3,16 @@ services:
     image: docker.elastic.co/kibana/kibana:8.19.4
     container_name: kibana
     restart: always
-    #depends_on:
-    #  - elasticsearch
-    #volumes:
-    #  - kibana_data:/usr/share/kibana/data
     networks:
       - elastic
     ports:
       - "5601:5601"
     environment:
+      - ELASTICSEARCH_HOSTS=http://elasticsearch:9200
       - ELASTICSEARCH_USERNAME=kibana_system
       - ELASTICSEARCH_PASSWORD=changeme
-      - XPACK_ENCRYPTEDSAVEDOBJECTS_ENCRYPTIONKEY=ssamplekey123456
-      # - XPACK_SECURITY_ENABLE=true
+      - XPACK_ENCRYPTEDSAVEDOBJECTS_ENCRYPTIONKEY=7c16804a48f31d1cf9f112f08cd3201c
+
 networks:
   elastic:
     external: true
-#volumes:
-#  kibana_data:
-#    driver: local
