housekeep: container name

--- a/mysql/docker-compose.yml
+++ b/mysql/docker-compose.yml
@@ -1,6 +1,7 @@
 services:
-  db_mysql:
+  mysql:
     image: mysql:8.0
+    container_name: db_mysql
     restart: always
     networks:
       - defaults
