--- a/postgresql/docker-compose.yml
+++ b/postgresql/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3.8"
 services:
-  db:
-    container_name: postgresql
+  postgresql:
+    container_name: db_postgresql
     build:
       context: .
       dockerfile: postgis.Dockerfile
